turtleart.lessons.turtleart.Main.CircleYing.scala.error
Source:10: error: not found: value abs
		for (i<-1 to abs(cote)) {
                             ^